--- a/css/sliderShow.css
+++ b/css/sliderShow.css
@@ -70,3 +70,35 @@ div.sliderOuterContainer > div.sliderInnerContainer > img{
 
     color: red;
 }
+
+#contentContainer{
+
+    position: absolute;
+    z-index: 101;
+    bottom: calc(0% + 5px);
+    left: 50%;
+    transform: translateX(-50%);
+    display: flex;
+    margin: 0;
+}
+
+#contentContainer > li{
+
+    list-style: none;
+    width: 15px;
+    height: 15px;
+    border-radius: 50%;
+    background-color: white;
+    opacity: 1;
+    margin-left: 10px;
+}
+
+#contentContainer > li.clicked{
+
+    background-color: gray;
+}
+
+#contentContainer > li.outer{
+
+    opacity: 0;
+}
