--- a/css/FullscreenAnimatedStickyHeader.css
+++ b/css/FullscreenAnimatedStickyHeader.css
@@ -48,7 +48,7 @@ div.header > div.nav{
 
     z-index: 1;
 
-    color: red;
+    color: #FFF;
 
     display: none;
 
@@ -90,7 +90,7 @@ div.header > div.dropDown{
 
     cursor: pointer;
 
-    color: red;
+    color: #fff;
 }
 
 div.sticky > div.dropDown{
